[gd_scene load_steps=7 format=3 uid="uid://c1x8qiqgfmipg"]

[ext_resource type="Shader" path="res://shaders/spiral_enemy.gdshader" id="1_0kyrd"]
[ext_resource type="Script" path="res://scripts/spiral_enemy.gd" id="2_q2d51"]
[ext_resource type="Texture2D" uid="uid://bu7dv5ftc4rw4" path="res://assets/spiralEnemySprites/SpiralEnemy.png" id="3_ssl6b"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_820yo"]
resource_local_to_scene = true
shader = ExtResource("1_0kyrd")
shader_parameter/damage_value = 0.0
shader_parameter/alpha_value = 1.0

[sub_resource type="CircleShape2D" id="CircleShape2D_1lg6l"]

[sub_resource type="Curve" id="Curve_pvlwg"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -1.72592, 0.0, 0, 0]
point_count = 2

[node name="SpiralEnemy" type="Area2D" groups=["Enemy"]]
z_index = 1
material = SubResource("ShaderMaterial_820yo")
script = ExtResource("2_q2d51")

[node name="SpiralEnemy" type="Sprite2D" parent="."]
use_parent_material = true
texture = ExtResource("3_ssl6b")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(206, 1)
scale = Vector2(10.5075, 14.457)
shape = SubResource("CircleShape2D_1lg6l")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PackedVector2Array(206, -144, -206, -144, -311, 0, -207, 145, 206, 146)

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
z_index = 5
scale = Vector2(15, 15)
emitting = false
amount = 10
lifetime = 2.0
one_shot = true
speed_scale = 2.0
explosiveness = 0.9
emission_shape = 1
emission_sphere_radius = 5.0
direction = Vector2(1, 1)
spread = 180.0
gravity = Vector2(0, 600)
initial_velocity_min = 25.0
initial_velocity_max = 50.0
angle_min = -90.0
angle_max = 90.0
scale_amount_min = 30.0
scale_amount_max = 45.0
scale_amount_curve = SubResource("Curve_pvlwg")
color = Color(1, 0, 1, 1)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
